[gd_scene load_steps=18 format=3 uid="uid://dra3hc8ab25qs"]

[ext_resource type="Script" path="res://scenes/game/game_ui_infinite.gd" id="1_irgqw"]
[ext_resource type="Script" path="res://script/input_control.gd" id="2_fnkx5"]
[ext_resource type="PackedScene" uid="uid://bmd3n7oiftiss" path="res://scenes/game/game_ui/pause_controler.tscn" id="3_je7s7"]
[ext_resource type="PackedScene" uid="uid://cew1lc4b8f86w" path="res://scenes/menu/pause_menu.tscn" id="4_tu6sk"]
[ext_resource type="Script" path="res://scenes/game/level_generator.gd" id="5_e36jr"]
[ext_resource type="PackedScene" uid="uid://dyo2m2g4f3c3c" path="res://scenes/level_editor/puzzle_generator.tscn" id="6_e8ywt"]
[ext_resource type="PackedScene" uid="uid://cv1jmy5vty2xe" path="res://scenes/bg_canvas_layer.tscn" id="7_d0rsg"]
[ext_resource type="Script" path="res://script/theme_panel_container.gd" id="8_3viga"]
[ext_resource type="Script" path="res://script/theme_label.gd" id="9_k3ipp"]
[ext_resource type="Script" path="res://script/theme_button.gd" id="10_24ddn"]
[ext_resource type="Script" path="res://script/theme_check_button.gd" id="10_mghdv"]
[ext_resource type="Texture2D" uid="uid://vj5d0sljoqhx" path="res://assets/img/icon/icons8-home-96.png" id="11_4xvly"]
[ext_resource type="Texture2D" uid="uid://dvo0syth5khae" path="res://assets/img/icon/icons8-menu-96.png" id="12_vwii2"]
[ext_resource type="Texture2D" uid="uid://bcq0hgbdpgdfb" path="res://assets/img/icon/icons8-sun-96.png" id="13_hgycp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ymfg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tf47k"]

[sub_resource type="Environment" id="Environment_11cwd"]
background_mode = 3
glow_enabled = true
glow_strength = 1.1

[node name="GameUIInfinite2" type="Control" groups=["game_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irgqw")

[node name="InputControl" type="Node2D" parent="." node_paths=PackedStringArray("init_focus_node")]
unique_name_in_owner = true
script = ExtResource("2_fnkx5")
init_focus_node = NodePath("../UILayer/GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")

[node name="PauseController" parent="." instance=ExtResource("3_je7s7")]
pause_menu_packed = ExtResource("4_tu6sk")

[node name="LevelGenerator" type="Node" parent="."]
script = ExtResource("5_e36jr")

[node name="PuzzleGenerator" parent="LevelGenerator" instance=ExtResource("6_e8ywt")]
unique_name_in_owner = true

[node name="UILayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="BGCanvasLayer" parent="UILayer" instance=ExtResource("7_d0rsg")]

[node name="GeneratorContainer" type="PanelContainer" parent="UILayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -211.5
offset_right = 292.5
offset_bottom = 403.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ymfg")
script = ExtResource("8_3viga")
light_color = Color(0.898039, 0.898039, 0.898039, 1)

[node name="MarginContainer" type="MarginContainer" parent="UILayer/GeneratorContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer"]
layout_mode = 2

[node name="SizeSettingContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
layout_mode = 2
text = "Board Size"
horizontal_alignment = 2
script = ExtResource("9_k3ipp")

[node name="Control" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "7x7"
script = ExtResource("9_k3ipp")

[node name="CheckButtonSize7" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../GenerateButton")
focus_neighbor_right = NodePath("../CheckButtonSize10")
focus_neighbor_bottom = NodePath("../../SymetrySettingContainer/VBoxContainer/HBoxContainer/CheckButton2m")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
button_pressed = true
script = ExtResource("10_mghdv")

[node name="Control2" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "10x10"
script = ExtResource("9_k3ipp")

[node name="CheckButtonSize10" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SizeSettingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../CheckButtonSize7")
focus_neighbor_top = NodePath("../../GenerateButton")
focus_neighbor_right = NodePath("../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../SymetrySettingContainer/VBoxContainer/HBoxContainer/CheckButton2m")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
script = ExtResource("10_mghdv")

[node name="Control2" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="SymetrySettingContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer"]
layout_mode = 2
text = "Symmetry Type"
horizontal_alignment = 2
script = ExtResource("9_k3ipp")

[node name="Control" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2-way mirror"
script = ExtResource("9_k3ipp")

[node name="CheckButton2m" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../../../SizeSettingContainer/CheckButtonSize7")
focus_neighbor_right = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/CheckButton2r")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
button_pressed = true
script = ExtResource("10_mghdv")

[node name="HBoxContainer2" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2-way rotation"
script = ExtResource("9_k3ipp")

[node name="CheckButton2r" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../HBoxContainer/CheckButton2m")
focus_neighbor_right = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/CheckButton4m")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
script = ExtResource("10_mghdv")

[node name="HBoxContainer3" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4-way mirror"
script = ExtResource("9_k3ipp")

[node name="CheckButton4m" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../HBoxContainer2/CheckButton2r")
focus_neighbor_right = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer4/CheckButton4r")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
script = ExtResource("10_mghdv")

[node name="HBoxContainer4" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4-way rotation"
script = ExtResource("9_k3ipp")

[node name="CheckButton4r" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SymetrySettingContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../HBoxContainer3/CheckButton4m")
focus_neighbor_right = NodePath("../../../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../../../DifficultySettingContainer/CheckButtonEasy")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
script = ExtResource("10_mghdv")

[node name="WallSettingContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/WallSettingContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Fill Percent"
horizontal_alignment = 2
script = ExtResource("9_k3ipp")

[node name="PercentOptionButton" type="OptionButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/WallSettingContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
selected = 0
item_count = 2
popup/item_0/text = "20%"
popup/item_1/text = "30%"
popup/item_1/id = 1
script = ExtResource("10_24ddn")

[node name="Control3" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="DifficultySettingContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Difficulty"
horizontal_alignment = 2
script = ExtResource("9_k3ipp")

[node name="Control" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Easy"
script = ExtResource("9_k3ipp")

[node name="CheckButtonEasy" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../../LeftButtonContainer/MainButton")
focus_neighbor_top = NodePath("../../SymetrySettingContainer/VBoxContainer/HBoxContainer4/CheckButton4r")
focus_neighbor_right = NodePath("../CheckButtonTricky")
focus_neighbor_bottom = NodePath("../../GenerateButton")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
button_pressed = true
script = ExtResource("10_mghdv")

[node name="Control2" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tricky"
script = ExtResource("9_k3ipp")

[node name="CheckButtonTricky" type="CheckButton" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/DifficultySettingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../CheckButtonEasy")
focus_neighbor_top = NodePath("../../SymetrySettingContainer/VBoxContainer/HBoxContainer4/CheckButton4r")
focus_neighbor_right = NodePath("../../../../../LeftButtonContainer/MainButton")
focus_neighbor_bottom = NodePath("../../../../../LeftButtonContainer/MainButton")
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tf47k")
script = ExtResource("10_mghdv")

[node name="SeedSettingContainer" type="HBoxContainer" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SeedSettingContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Seed"
horizontal_alignment = 2
script = ExtResource("9_k3ipp")

[node name="SeedEdit" type="TextEdit" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/SeedSettingContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
placeholder_text = "Random"

[node name="Control" type="Control" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="GenerateButton" type="Button" parent="UILayer/GeneratorContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../../../LeftButtonContainer/LightModeButton")
focus_neighbor_top = NodePath("../DifficultySettingContainer/CheckButtonEasy")
focus_neighbor_right = NodePath("../../../../LeftButtonContainer/LightModeButton")
focus_neighbor_bottom = NodePath("../SizeSettingContainer/CheckButtonSize7")
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Generate"
script = ExtResource("10_24ddn")

[node name="LeftButtonContainer" type="VBoxContainer" parent="UILayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -148.0
offset_right = 96.0
offset_bottom = 148.0
grow_vertical = 2

[node name="MainButton" type="Button" parent="UILayer/LeftButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_left = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_top = NodePath("../LightModeButton")
focus_neighbor_right = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_bottom = NodePath("../MenuButton")
focus_mode = 0
icon = ExtResource("11_4xvly")
icon_alignment = 1
expand_icon = true
script = ExtResource("10_24ddn")

[node name="MenuButton" type="Button" parent="UILayer/LeftButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_left = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_top = NodePath("../MainButton")
focus_neighbor_right = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_bottom = NodePath("../LightModeButton")
focus_mode = 0
icon = ExtResource("12_vwii2")
icon_alignment = 1
expand_icon = true
script = ExtResource("10_24ddn")

[node name="LightModeButton" type="Button" parent="UILayer/LeftButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_left = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_top = NodePath("../MenuButton")
focus_neighbor_right = NodePath("../../GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton")
focus_neighbor_bottom = NodePath("../MainButton")
focus_mode = 0
icon = ExtResource("13_hgycp")
icon_alignment = 1
expand_icon = true
script = ExtResource("10_24ddn")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_11cwd")

[connection signal="level_loaded" from="LevelGenerator" to="." method="_on_level_generator_level_loaded"]
[connection signal="pressed" from="UILayer/GeneratorContainer/MarginContainer/VBoxContainer/GenerateButton" to="LevelGenerator" method="_on_generate_button_pressed"]
[connection signal="pressed" from="UILayer/LeftButtonContainer/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="UILayer/LeftButtonContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UILayer/LeftButtonContainer/LightModeButton" to="." method="_on_light_mode_button_pressed"]
